Fixed bug - filter button now shows on smaller windows

--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -316,37 +316,17 @@ img {
     color: black;
 }
 
-.sidebar-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 200px;
-    height: 100%;
-
-    overflow-x: hidden;
-    padding-top: 20px;
-    transition: 0.5s;
-
-    flex: 1;
-    display: block;
-}
-  
 .sidebar {
     padding: 10px;
     color: white;
     text-align: center;
-    position: fixed;
+ 
 }
 
 .container {
     margin-top: 0;
     display: flex;
     flex-direction: row;
-}
-
-.game-container {
-    margin-top: 20px;
-    margin-left: 9%;
 }
 
  /* Add these styles for the modal */
